<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.DisplaySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_intro_title"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_intro_body"
            android:textAlignment="center"
            android:layout_marginBottom="55dp" />


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="2dp"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="32dp"
                android:paddingRight="32dp">


                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:contentDescription="@string/onboarding_intro_card_title"
                    android:src="@mipmap/ic_launcher_round" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.BodyMedium"
                    android:layout_marginTop="40dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/onboarding_intro_card_body"
                    android:textAlignment="center"
                    android:textSize="17dp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.DisplaySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_intro_final_title"
            android:textAlignment="center"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/onboarding_intro_final_body"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
